Bug: Made tabs still visible while scrolling table

--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -136,33 +136,33 @@
                 }
             }
         }
+        .tab-parent {
+            display: flex;
+            width: 90%;
+            margin: 0 auto;
+            .tab,
+            .active-tab {
+                background-image: linear-gradient(to top, #42424a, #191919);
+                color: white;
+                padding: 15px;
+                font-weight: bold;
+                border-radius: 10px 30px 0px 0px;
+                width: 150px;
+                cursor: pointer;
+            }
+            .active-tab {
+                background-image: linear-gradient(to top, rgb(34, 130, 255), rgb(6, 63, 167));
+            }
+        }
         .table-wrapper {
             width: 90%;
             border-collapse: collapse;
-            border-radius: 15px;
+            border-radius: 0 15px 15px 15px;
             max-height: 600px;
             overflow-y: auto;
             overflow-x: auto;
             margin: 0 auto;
-            border-radius: 15px;
-            .tab-parent {
-                display: flex;
-                .tab,
-                .active-tab {
-                    background-image: linear-gradient(to top, #42424a, #191919);
-                    color: white;
-                    padding: 15px;
-                    font-weight: bold;
-                    border-radius: 10px 30px 0px 0px;
-                    width: 150px;
-                    cursor: pointer;
-                }
-                .active-tab {
-                    background-image: linear-gradient(to top, rgb(34, 130, 255), rgb(6, 63, 167));
-                }
-            }
             table {
-                border-radius: 0 0 15px 15px;
                 width: 100%;
                 border-collapse: collapse;
                 border-radius: 15px;
